crates/nash-config/src/snapshots/nash_config__parse__build_tests__o2_verbose.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"optimize\":2,\"traceLevel\":\"verbose\"}"
info: diagnostic
---
  × 'nash.jsonc' at 1:34: O2 requires silent tracing; compact and verbose
  │ tracing are not supported
