crates/nash-config/src/snapshots/nash_config__parse__build_tests__optimization_levels_roundtrip.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"optimize\":0,\"traceLevel\":\"verbose\",\"compilerTraces\":true}"
---
{
  "type": "application",
  "optimize": 0,
  "traceLevel": "verbose",
  "compilerTraces": true,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
