crates/nash-config/src/snapshots/nash_config__parse__build_tests__package_build_settings.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"package\",\"name\":\"test/lib\",\"version\":\"1.0.0\",\"summary\":\"\",\"license\":\"MIT\",\"exposedModules\":[],\"traceLevel\":\"verbose\",\"compilerTraces\":true}"
---
{
  "type": "package",
  "traceLevel": "verbose",
  "compilerTraces": true,
  "name": "test/lib",
  "version": "1.0.0",
  "summary": "",
  "license": "MIT",
  "exposedModules": [],
  "dependencies": {},
  "testDependencies": {}
}
