crates/nash-config/src/snapshots/nash_config__parse__build_tests__package_invalid_optimizer.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"package\",\"name\":\"test/lib\",\"version\":\"1.0.0\",\"summary\":\"\",\"license\":\"MIT\",\"exposedModules\":[],\"optimize\":null}"
info: diagnostic
---
  × 'nash.jsonc' at 1:115: 'optimize' must be the integer 0 or 1
