crates/nash-config/src/snapshots/nash_config__parse__build_tests__package_optimizer_unavailable.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"package\",\"optimize\":null}"
info: diagnostic
---
  × 'nash.jsonc' at 1:19: 'optimize' is unavailable; optimizer support is not
  │ implemented
