crates/nash-config/src/snapshots/nash_config__parse__build_tests__plutus_version_wrong_type.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"plutusVersion\":3}"
info: diagnostic
---
  × 'nash.jsonc' at 1:39: expected a string
