crates/nash-config/src/snapshots/nash_config__parse__build_tests__silent_o2_roundtrip_and_test_defaults-2.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"optimize\":2,\"traceLevel\":\"silent\"}"
---
{
  "type": "application",
  "optimize": 2,
  "traceLevel": "silent",
  "compilerTraces": false,
  "sourceDirectories": [
    "src"
  ],
  "dependencies": {},
  "testDependencies": {}
}
