crates/nash-config/src/snapshots/nash_config__parse__build_tests__silent_o2_roundtrip_and_test_defaults-3.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"package\",\"name\":\"test/lib\",\"version\":\"1.0.0\",\"summary\":\"\",\"license\":\"MIT\",\"exposedModules\":[],\"optimize\":2}"
---
{
  "type": "package",
  "optimize": 2,
  "compilerTraces": false,
  "name": "test/lib",
  "version": "1.0.0",
  "summary": "",
  "license": "MIT",
  "exposedModules": [],
  "dependencies": {},
  "testDependencies": {}
}
