crates/nash-config/src/snapshots/nash_config__parse__build_tests__trace_level_wrong_type.snap
---
source: crates/nash-config/src/parse.rs
description: "{\"type\":\"application\",\"traceLevel\":null}"
info: diagnostic
---
  × 'nash.jsonc' at 1:36: expected a string
